tests/valid/functions/define_after.rs
/*
executionExitCode: 4
*/

main(): i32{
    return foo(3);
}

foo(a: i64): i64{
    return a + 1;
}