tests/invalid/functions/too_many_args.rs
/*
compilationExitCode: 3
*/

foo(a: i64): i64 {
    return a + 1;
}

main(): i32 {
    return foo(1, 2);
}